# scall

./: .gitignore  =1.23.0  Experimental_Data.md  HANDOVER.md  LICENSE  README.md  beta_bw_viterbi_fw.py  check_sparsity.py  compare_filenames.py  filename_comparison.txt  model_comparison.json  read_hdf5_file.py  run_compare.sh  run_encoder_only.sh  run_evaluation.sh  run_train.sh  verify_cgb_sparsity.py  viterbi.py  viterbi_0126.py  viterbi_0211.py  viterbi_0224.py  viterbi_requirements.txt  viterbi_reshape.py
MoffettLSTM/: test.py
MoffettLSTM/.build/: .ninja_deps  .ninja_log  build.ninja
MoffettLSTM/csrc/: lstm_cpu.cpp  lstm_cuda.cu
MoffettLSTM/custom_lstm/: __init__.py  _ext.py  module.py  ops.py
analysis/: analyze_spu_gpu_diff.py  run_analysis.sh  visualize_spu_gpu_diff.py
caoyu/: read_layer_outputs.py  read_output.py  run_backend.py  run_backend_bf16.py
cyclonebasecall-moffett_dense/: .gitignore  README.md  requirements.txt  setup.py
cyclonebasecall-moffett_dense/cyclonebasecall/: batch_basecall.py  conf.py  util.py
deploy/cycloneio/: setup.py
deploy/docker/: Dockerfile  build_container_all_gpus.sh  build_container_all_gpus_conformer.sh  build_image.sh  requirements.txt
eval/: eval.py  requirements.txt
methyl_model-main/: .gitignore  README.md  main.py  model.py  requirements.txt
methyl_model-main/wy_human_v0.1/: config.json  readme.txt
opencall/configs/: conformer.toml  (+4 more)
opencall_cli/: config.py  convert_hdf5_to_pt.py  evaluate.py  train_fast.py  train_index.py  train_index_ddp.py  train_index_ddp_encoder_only.py  train_index_ddp_sparse.py  train_index_lstm_encoder_only.py
pruning/: __init__.py  bbs.py  block_balanced_pruning.py  cgb_helper.py  compiler_frontend_prune_unit.py  compiler_frontend_prune_unit_torch.py  load_io_quant.py  logger.py  lstmIOquant_jjy.py  misc.py  readme.md  scheduler.py  stage_wise_pruner.py  test_compare.py
pruning_huada/: README.md  lstmIOquant_jjy.py  train_index_ddp_sparse.py  train_index_ddp_sparse.sh
quantization/: lstmIOquant_jjy.py
reads_evaluation/: calculate_accuracy.py  compare_qscores.py  example.py  requirements.txt  run_evaluation.sh  validate_qscores.py
reads_evaluation/ms_postprocessing_cpu/: CMakeLists.txt  README.md  version.h.in
reads_evaluation/ms_postprocessing_cpu/Release/: demo  librta_postprocess.so.0.3.5  parse_dat  perf  stress
reads_evaluation/ms_postprocessing_cpu/cmake/: MSPOSTPROCESSVersion.cmake
reads_evaluation/ms_postprocessing_cpu/include/: rta_common.h  rta_postprocess.h  rta_postprocess_common.h
reads_evaluation/ms_postprocessing_cpu/output/: wy_qscore_5_cpu.csv
reads_evaluation/ms_postprocessing_cpu/samples/: CMakeLists.txt  demo.cpp  npy.h  parse_dat.cpp  perf.cpp  stress.cpp
reads_evaluation/ms_postprocessing_cpu/src/: CMakeLists.txt  kernel_cpu.cpp  kernel_cpu.h  postprocess.cpp  postprocess.h  rta_postprocess.cpp  version.h
scripts/: evaluate.sh
wangqiao/: compare_accuracy.py  compare_sample139_detail.py  compare_scores.py  compare_spu_gpu_layers.py  compare_spu_gpu_noquant_layers.py  debug_sample_139.py  find_transform_139.py  find_transform_139_v2.py  plot_sample139.py  spu_self_fix_139.py  viterbi_wangqiao.py
(+82 files in other folders)
